samples/_failures_safe/1761276536_24a7d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f03e9a0f.c: In function ‘main’:
./samples/SAFE/__tmp_f03e9a0f.c:168:9: error: expected declaration or statement at end of input
  168 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_f03e9a0f.c:168:9: error: expected declaration or statement at end of input
